# -project_x

./: .gitignore  README.md  setup.cfg
src/: login.py
src/__pycache__/: create _post.py
src/project_x.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: confcest.py  test_login.py
