[metadata]
name = project_x
description = GET, POST, DELETE tweets
version = 0.0.0

[build-system] 
setup_requires = ["setuptools>=45", "setuptools_scm>=6.2","wheel"]

[options]
include_package_data = True
packages = find:
packages_dir = 
    =src

[options.packages.find]
where = src

[options.extras_require]
testing = 
    setuptools 
    pytest

[tool:pytest]
norecursedirs =
    dist
    build
    .tox
testpaths = tests
